Adicionado importação de pedidos

--- a/IntegracoesVTEX/IntegracoesVTEX.csproj
+++ b/IntegracoesVTEX/IntegracoesVTEX.csproj
@@ -44,6 +44,11 @@
     <Reference Include="System.ServiceProcess" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\SQL\Queries.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Queries.resx</DependentUpon>
+    </Compile>
     <Compile Include="Entity\PriceTag.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
@@ -130,10 +135,19 @@
     <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="DAL\SQL\Queries.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Queries.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="IntegracoesVTEX\ProjectInstaller.resx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DAL\Scripts\SP_WAHL_PedidoVTEX_Adicionar.sql" />
+    <Content Include="DAL\SQL\VTEX_InserirPedido.sql" />
+    <Content Include="DAL\SQL\VTEX_PedidosIntegrar.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
