Segregacao dos logs

--- a/IntegracoesVTEX/app.config
+++ b/IntegracoesVTEX/app.config
@@ -4,12 +4,12 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <appSettings>
-    <add key="intervaloExecucaoClientes" value="600000000" />
-    <add key="intervaloExecucaoEstoque" value="900000000" />
-    <add key="intervaloExecucaoPedido" value="600000000" />
-    <add key="intervaloExecucaoRetNF" value="900000000" />
-    <add key="intervaloExecucaoCancelPedido" value="900000000" />
-    <add key="intervaloExecucaoCodRastreio" value="900" />
+    <add key="intervaloExecucaoClientes" value="600000" />
+    <add key="intervaloExecucaoEstoque" value="900000" />
+    <add key="intervaloExecucaoPedido" value="600000" />
+    <add key="intervaloExecucaoRetNF" value="3600000" />
+    <add key="intervaloExecucaoCancelPedido" value="900000" />
+    <add key="intervaloExecucaoCodRastreio" value="3600000" />
     <add key="horaExecucaoEnvioCodRastreamento" value="20:12" />
     <add key="jobIntegracaoClientes" value="true" />
     <add key="jobIntegracaoEstoque" value="false" />
