--- a/IntegracoesVTEX/IntegracoesVTEX.csproj
+++ b/IntegracoesVTEX/IntegracoesVTEX.csproj
@@ -172,8 +172,10 @@
   <ItemGroup>
     <Content Include="DAL\Scripts\SP_WAHL_PedidoVTEX_Adicionar.sql" />
     <Content Include="DAL\Scripts\SP_WAHL_PedidoVTEX_Status.sql" />
+    <Content Include="DAL\SQL\TblUser_BuscaIdLog.sql" />
     <Content Include="DAL\SQL\SAP_BuscaCodRastreio.sql" />
     <Content Include="DAL\SQL\SAP_DadosNF.sql" />
+    <Content Include="DAL\SQL\TblUser_UpdateLog.sql" />
     <Content Include="DAL\SQL\VTEX_PedidoStatus.sql" />
     <Content Include="DAL\SQL\VTEX_InserirPedido.sql" />
     <Content Include="DAL\SQL\VTEX_PedidosIntegrar.sql" />
