--- a/IntegracoesVTEX/app.config
+++ b/IntegracoesVTEX/app.config
@@ -6,10 +6,10 @@
   <appSettings>
     <add key="intervaloExecucaoClientes" value="600000" />
     <add key="intervaloExecucaoEstoque" value="900000" />
-    <add key="intervaloExecucaoPedido" value="60000" />
+    <add key="intervaloExecucaoPedido" value="900000" />
     <add key="intervaloExecucaoRetNF" value="3600000" />
     <add key="intervaloExecucaoCancelPedido" value="900000" />
-    <add key="intervaloExecucaoCodRastreio" value="3600000" />
+    <add key="intervaloExecucaoCodRastreio" value="60000" />
     <add key="horaExecucaoEnvioCodRastreamento" value="20:12" />
     <add key="jobIntegracaoClientes" value="true" />
     <add key="jobIntegracaoEstoque" value="false" />
